2007-04-21 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/io90pwm3.h: Change bit 2 of PLLCSR from
	PCKE to PLLF.
	Fixes savannah bug #19650: avr-libc: wrong named bit in SFR of AT90PWMx

2007-04-05  Eric B. Weddington <eweddington@cso.atmel.com>

	* doc/api/malloc.dox: Change title and reorder sentences in Introduction.

2007-03-30  Eric B. Weddington <eweddington@cso.atmel.com>

	* include/avr/io2343.h: Add missing bit definitions for MCUSR.
	Fixes WinAVR feature request #1657218.

2007-03-30  Dmitry Xmelkov  <dmix@gmail.ru>

	* libc/stdlib/ctype.S: Fix bug #19281: isblank('\v') return TRUE:
	mismatch to C99

2007-03-29  Eric B. Weddington <eweddington@cso.atmel.com>

	* doc/api/doxygen.config.in (INPUT): Add new file to list. Reorder list.
	* doc/api/pgmspace.dox (new file): New chapter. Data in Program Space.
	* doc/api/library.dox (new file): New chapter. How to Create a Library.
	* doc/api/porting.dox: Rewrote the introduction for better flow.
	* doc/api/Makefile.am (EXTRA_DIST): Add new .dox file.
	* include/avr/pgmspace.h: Change title of documentation.
	* doc/api/interrupts.dox: Fix typo. Add missing 3rd clause to license.

2007-03-28  Eric B. Weddington <eweddington@cso.atmel.com>

	* doc/api/doxygen.config.in (INPUT): Add new file to list. Reorder.
	* doc/api/overview.dox (new file): New chapter. Overview of toolchain.
    * doc/api/Makefile.am (EXTRA_DIST): Add the two new .dox files.

2007-03-28 Anatoly Sokolov <aesok@post.ru>

	* configure.ac: Add tests for the AT90USB82/162 support.
	* devtools/gen-avr-lib-tree.sh: Add support for AT90USB82/162.
	* include/avr/io.h: (Ditto.).
	* include/avr/wdt.h: (Ditto.).
	* include/avr/iousb82.h: New file.
	* include/avr/iousb162.h: New file.
	* include/avr/iousbxx2.h: New file.
	* include/avr/Makefile.am: Include new files.
	* doc/api/main_page.dox: Document support for AT90USB82/162.
	* doc/api/using-tools.dox: (Ditto.)

2007-03-26  Eric B. Weddington <eweddington@cso.atmel.com>
